# trading

./: .gitignore  Jenkinsfile  README.md  pyproject.toml
backtest_api/: fast_filter.py  main.py  walk_forward.py
config/: backtest.json  live_template.json  paper_template.json
deploy/: Dockerfile  ansible-deploy.yml  backtest-api.container
paper/: monitor.py  orchestrator.py
scripts/: download_data.py
sql/: init.sql
strategies/: NullStrategy.py
tests/: test_fast_filter.py
