[project]
name = "trading"
version = "0.1.0"
description = "Hyperliquid agent trading stack — backtest API, OHLCV collection, paper arena, live bot"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ccxt>=4.4",
    "pandas>=2.2",
    "pandas-ta>=0.3",
    "pyarrow>=18.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "psycopg2-binary>=2.9",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backtest_api", "paper", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
